universe-apps/environments/prod/documentdb-proxy/patch-cmd-args.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: documentdb-proxy
spec:
  template:
    spec:
      containers:
      - name: proxy
        args: ["tcp", "27017", "documentdb-proxy.prod"]
