universe-apps/environments/prod/documentdb-proxy/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: documentdb-proxy
spec:
  externalName: universe-prod.cluster-cotqfbtbif7j.us-east-1.docdb.amazonaws.com
