universe-apps/environments/prod/documentdb-proxy/patch-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: documentdb-proxy
  annotations:
    external-dns.alpha.kubernetes.io/hostname: documentdb-proxy.universe.xyz
